---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: .2023
  Features:
    - Added pyanodons integration
  Changes:
    - Adapted bob technology FTL D research cost to new curve
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 22.03.2023
  Major Features:
    - First release of the forked version
    - Added a new stage
      - Requires to bring oxygen, fuel, water and ai companions to the spaceship.
      - A space map has to be created to find a destination.
      - Adds a few more technologies, new recipes and a new satellite that returns an item required to craft the space map.
  Features:
    - Added startup option to split combinator signal output. If enabled:
      - Exisiting combinator will output the required item for the current stage only
      - New combinator will output the current stage as special signal S only
    - Added player option to display days or hours in the log
    - Added new item group for spacex items
    - Added startup setting to replace nuclear with rocket fuel
    - Added startup setting "Classic Mode" which disables the new stage 4 additions
    - Added Laser Cannon to the already existing stage 3
    - Added Lab as ingridient to astrometrics lab
    - Added more strings to translation config file
  Changes:
    - Changed game completion logic. Finish screen will be shown after first SpaceX completion. Game and SpaceX can be continued afterwards
    - Changed research cost to gradually increase
    - Replaced rocket fuel with nuclear reactor for the fuel cell
    - Changed GUI to only display the required items for the current stage
    - Changed GUI to display the stage number
    - Various GUI overhauls to look more aesthetic
      - Main GUI
      - Log GUI
    - Slightly changed color of combinator graphics