@@ -33,6 +33,7 @@ data:extend({
 				{ "logistic-science-pack", 1 },
 				{ "chemical-science-pack", 1 },
 				{ "production-science-pack", 1 },
+				{ "utility-science-pack", 1 },
 			},
 			time = 60,
 		},
@@ -61,6 +62,7 @@ data:extend({
 				{ "logistic-science-pack", 1 },
 				{ "chemical-science-pack", 1 },
 				{ "production-science-pack", 1 },
+				{ "utility-science-pack", 1 },
 			},
 			time = 60,
 		},
@@ -85,6 +87,7 @@ data:extend({
 				{ "logistic-science-pack", 1 },
 				{ "chemical-science-pack", 1 },
 				{ "production-science-pack", 1 },
+				{ "utility-science-pack", 1 },
 			},
 			time = 60,
 		},
@@ -110,6 +113,7 @@ data:extend({
 				{ "chemical-science-pack", 1 },
 				{ "military-science-pack", 1 },
 				{ "utility-science-pack", 1 },
+				{ "production-science-pack", 1 },
 			},
 			time = 60,
 		},
@@ -160,6 +164,7 @@ data:extend({
 				{ "logistic-science-pack", 1 },
 				{ "chemical-science-pack", 1 },
 				{ "production-science-pack", 1 },
+				{ "utility-science-pack", 1 },
 			},
 			time = 60,
 		},
@@ -183,6 +188,7 @@ data:extend({
 				{ "automation-science-pack", 1 },
 				{ "logistic-science-pack", 1 },
 				{ "chemical-science-pack", 1 },
+				{ "production-science-pack", 1 },
 				{ "utility-science-pack", 1 },
 			},
 			time = 60,
